--- a/views/user/create.pug
+++ b/views/user/create.pug
@@ -18,6 +18,10 @@ block add-new
 			input(name="id", type="text", value=userInput?userInput.id:"",hidden)
 			h4 Name
 			input(name="name", type="text", value=userInput?userInput.name:"")
+			h4 Username
+			input(name="username", type="text", value=userInput?userInput.username:"")
+			h4 Password
+			input(name="password", type="text", value=userInput?userInput.password:"")
 			h4 Address
 			input(name="address", type="text", value=userInput?userInput.address:"")
 			hr
