--- a/views/layouts/common.pug
+++ b/views/layouts/common.pug
@@ -20,12 +20,18 @@ html
 						a.nav-link(href='/user') User
 					li.nav-item
 						a.nav-link(href='/user/create') Create User
+					li.nav-item
+						a.nav-link(href='/product') Product
 
 		block search-page
 		block add-new
 		block view
 		block login
 		block index
+		block productShow
+
+
+		div.alert-danger.mt-4.mb-4 Created by Duy
 
 		script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js',integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo',crossorigin='anonymous')
 		script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js',integrity='sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut',crossorigin='anonymous')
