--- a/views/user/view.pug
+++ b/views/user/view.pug
@@ -21,6 +21,16 @@ block view
 						h3=userInfo.name
 				tr
 					td
+						h4 Username:
+					td
+						h3=userInfo.username
+				tr
+					td
+						h4 Password:
+					td
+						h3=userInfo.password
+				tr
+					td
 						h4 Address:
 					td
 						h3=userInfo.address
