--- a/views/login/index.pug
+++ b/views/login/index.pug
@@ -12,6 +12,6 @@ block login
 			label.text-dark(for='username') Username
 			input.form-control(name='username',id='username',value=dataUserInput?dataUserInput.username:"")
 			label.text-dark(for='password') Password
-			input.form-control(name='password',id='password',value=dataUserInput?dataUserInput.password:"")
+			input.form-control(name='password',type='password',id='password',value=dataUserInput?dataUserInput.password:"")
 			button.btn.btn-primary.m-4 submit
 	
