--- a/views/user/create.pug
+++ b/views/user/create.pug
@@ -9,7 +9,7 @@ block add-new
 		if error
 			each err in error
 				.alert.alert-danger=err
-		form(action="/user/create" method="POST")
+		form(action="/user/create",method="POST",enctype="multipart/form-data")
 			h4="ID: "
 				if(userInput)
 					span=userInput.id
@@ -24,5 +24,7 @@ block add-new
 			input(name="password", type="text", value=userInput?userInput.password:"")
 			h4 Address
 			input(name="address", type="text", value=userInput?userInput.address:"")
+			h4 Avatar
+			input(name="avatar", type="file")
 			hr
 			input.btn.btn-success.mt-4(type="submit",value="Create")
